--- a/html/internal-CSS/table.html
+++ b/html/internal-CSS/table.html
@@ -21,7 +21,7 @@ th:nth-child(even),td:nth-child(even) {
 <h2 style="text-align:center;font-size:50px;background-color:beige;color:blueviolet;">Striped Table</h2>
 <table style="width:100%">
   <tr>
-    <th style="color:red;">MON</th>
+    <th>MON</th>
     <th>TUE</th>
     <th>WED</th>
     <th>THU</th>
