--- a/html/internal-CSS/table.html
+++ b/html/internal-CSS/table.html
@@ -17,7 +17,7 @@ th:nth-child(even),td:nth-child(even) {
 </style>
 </head>
 <body>
-  <!-------table-->
+  <!--table-->
 <h2 style="text-align:center;font-size:50px;background-color:beige;color:blueviolet;">Striped Table</h2>
 <table style="width:100%">
   <tr>
