--- a/html/internal-CSS/table.html
+++ b/html/internal-CSS/table.html
@@ -18,7 +18,7 @@ th:nth-child(even),td:nth-child(even) {
 </head>
 <body>
   <!--table-->
-<h2 style="text-align:center;font-size:50px;background-color:beige;color:blueviolet;">Striped Table</h2>
+<h2 style="text-align:center;font-size:50px;background-color:beige;color:blueviolet;">Table</h2>
 <table style="width:100%">
   <tr>
     <th>MON</th>
