--- a/HTML/elements.html
+++ b/HTML/elements.html
@@ -80,7 +80,7 @@
         </main>
     </header>
     
-<form action="/https://www.google.co.in" target="_blank">
+<form action="/https://www.google.co.in" target="_self">
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname" value="Himanshu"><br>
     <label for="lname">Last name:</label><br>
