--- a/php/form/studentget.html
+++ b/php/form/studentget.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="get.php" method="get">
+    <form action="action.php" method="get">
         Name: <input type="text" name="username" /><br />
         Roll Number: <input type="text" name="rollnumber" /><br />
         Class: <input type="text" name="class" /><br />
