--- a/php/form/studentpost.html
+++ b/php/form/studentpost.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="post.php" method="post">
+    <form action="action.php" method="post">
         Name: <input type="text" name="username" /><br />
         Roll Number: <input type="text" name="rollnumber" /><br />
         Class: <input type="text" name="class" /><br />
