--- a/form/studentpost.html
+++ b/form/studentpost.html
@@ -11,6 +11,8 @@
 <body>
     <form action="action.php" method="post">
         Name: <input type="text" name="username" /><br />
+        Father Name: <input type="text" name="fathername" /><br />
+        Mother Name: <input type="text" name="mothername" /><br />
         Roll Number: <input type="text" name="rollnumber" /><br />
         Class: <input type="text" name="class" /><br />
         Phone Number: <input type="text" name="phonenumber" /><br />
