--- a/html/external-CSS/wix/wix.html
+++ b/html/external-CSS/wix/wix.html
@@ -91,6 +91,9 @@
                 <a href="#"><img src="images/GettyImages-818735824.jpg" width="20%" height="200px"></a>
             </div>
         </div>
+        <footer>
+            <p>© 2023 by Frais. Proudly created with Wix.com</p>
+        </footer>
     </div>
 </body>
 
