--- a/html/external-CSS/wix/wix.html
+++ b/html/external-CSS/wix/wix.html
@@ -92,6 +92,43 @@
             </div>
         </div>
         <footer>
+            <ul>
+                <li>FRAIS
+                    <ul>
+                        <li>SHOP ALL</li>
+                        <li>FOR BODY</li>
+                        <li>FOR HOME</li>
+                        <li>ABOUT</li>
+                        <li>CONTACT</li>
+                    </ul>
+                </li>
+
+                <li>HELP
+                    <ul>
+                        <li>SHIPPING & RETURNS </li>
+                        <li>STORE POLICY </li>
+                        <li>PAYMENT METHODS </li>
+                        <li>FAQ</li>
+                    </ul>
+                </li>
+
+                <li>CONTACT
+                    <ul>
+                        <li>123-456-7890 </li>
+                        <li>INFO@MY-DOMAIN.COM</li>
+                    </ul>
+                </li>
+
+                <li>NEWSLETTER
+                    <ul>
+                        <form>
+                            <li> <label for="email">ENTER EMAIL*</label></li>
+                            <li> <input type="text" placeholder="Email"></li>
+                            <li> <input type="submit" value="SUBSCRIBE"></li>
+                        </form>
+                    </ul>
+                </li>
+            </ul>
             <p>© 2023 by Frais. Proudly created with Wix.com</p>
         </footer>
     </div>
