--- a/html/external-CSS/wix/wix.html
+++ b/html/external-CSS/wix/wix.html
@@ -95,27 +95,27 @@
             <ul>
                 <li>FRAIS
                     <ul>
-                        <li>SHOP ALL</li>
-                        <li>FOR BODY</li>
-                        <li>FOR HOME</li>
-                        <li>ABOUT</li>
-                        <li>CONTACT</li>
+                        <li><a href="#">SHOP ALL</a></li>
+                        <li><a href="#">FOR BODY</a></li>
+                        <li><a href="#">FOR HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 </li>
 
                 <li>HELP
                     <ul>
-                        <li>SHIPPING & RETURNS </li>
-                        <li>STORE POLICY </li>
-                        <li>PAYMENT METHODS </li>
-                        <li>FAQ</li>
+                        <li><a href="#">SHIPPING & RETURNS</a></li>
+                        <li><a href="#">STORE POLICY</a></li>
+                        <li><a href="#">PAYMENT METHODS</a></li>
+                        <li><a href="#">FAQ</a></li>
                     </ul>
                 </li>
 
                 <li>CONTACT
                     <ul>
-                        <li>123-456-7890 </li>
-                        <li>INFO@MY-DOMAIN.COM</li>
+                        <li><a href="#">123-456-7890</a></li>
+                        <li><a href="#">INFO@MY-DOMAIN.COM</a></li>
                     </ul>
                 </li>
 
