--- a/HTML/FRAIS.html
+++ b/HTML/FRAIS.html
@@ -34,16 +34,16 @@
         <div class="frais">
             <h2>FRAIS</h2>
         </div>
-           <div class="detail">
-                <ul>
-                    <li><a href="#"> Shop all</a></li>
-                    <li><a href="#"> For body</a></li>
-                    <li><a href="#"> For Home</a></li>
-                    <li><a href="#"> About</a></li>
-                    <li><a href="#"> contact</a></li>
-                </ul>
-            </div>
+        <div class="detail">
+            <ul>
+                <li><a href="#"> Shop all</a></li>
+                <li><a href="#"> For body</a></li>
+                <li><a href="#"> For Home</a></li>
+                <li><a href="#"> About</a></li>
+                <li><a href="#"> contact</a></li>
+            </ul>
         </div>
+    </div>
     </div>
     <div class="section-1">
         <div class="main">
@@ -55,7 +55,8 @@
             <p>Our Favorites</p>
             <div class="main-2one">
                 <h5>Probiotic cleansing bars</h5>
-                <h6>I'm a paragraph. Click here to add your<br> own text and edit me. Let your users get<br> to know you</h6>
+                <h6>I'm a paragraph. Click here to add your<br> own text and edit me. Let your users get<br> to know you
+                </h6>
                 <input type="button" value="Shop Now">
             </div>
             <div class="main-2two">
@@ -66,7 +67,8 @@
             </div>
             <div class="main-2four">
                 <h5>Nature's essence Scented Candles</h5>
-                <h6>I'm a paragraph. Click here to add your <br>own text and edit me. Let your users get<br> to know you.</h6>
+                <h6>I'm a paragraph. Click here to add your <br>own text and edit me. Let your users get<br> to know
+                    you.</h6>
                 <input type="button" value="Shop Now">
             </div>
         </div>
@@ -75,10 +77,20 @@
                 <h1>Naturally Simple</h1>
             </div>
             <div class="main-3two">
-                <p>I'm a paragraph. Click here to add your own text and edit <br>me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a<br> great place for you to tell a story and let your users know a little more about you.</p>
+                <p>I'm a paragraph. Click here to add your own text and edit <br>me. It’s easy. Just click “Edit Text”
+                    or double click me to add your own content and make changes to the font. I’m a<br> great place for
+                    you to tell a story and let your users know a little more about you.</p>
             </div>
             <div class="main-3three">
                 <input type="button" value="Learn more">
+                <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your
+                    services.”</p>
+                <h6>MIA, SAN FRANCISCO</h6>
+            </div>
+            <div class="main-3four">
+                <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your
+                    services.”</p>
+                <h6>MIA, SAN FRANCISCO</h6>
             </div>
         </div>
     </div>
