--- a/HTML/redwood.html
+++ b/HTML/redwood.html
@@ -31,7 +31,7 @@
         <li><a href="#"> Shop</a></li>
         <li><a href="#"> About me</a></li>
         <li><a href="#"> </a></li>
-        <a href="./order.html"><i class="fa-brands fa-facebook"></i></a>
+        <a href="./order.html"><i class="fa-brands fa-facebook text-white"></i></a>
         <a href="./order.html"><i class="fa-brands fa-twitter"></i></a>
         <a href="./order.html"><i class="fa-brands fa-instagram"></i></a>
         <a href="./order.html"><i class="fa-brands fa-pinterest"></i></a>
