--- a/Java Script/index.html
+++ b/Java Script/index.html
@@ -10,7 +10,9 @@
         Test
     </h1>
     <script>
-        
+        let test ;
+        test = "Hello World";
+        alert(test);
     </script>
 </body>
 </html>
